--- a/src/components/code-editor.css
+++ b/src/components/code-editor.css
@@ -1,16 +1,16 @@
 .editor-wrapper {
   position: relative;
   height: 100%;
-  width: 100%;
+  width: calc(100% - 10px);
 }
 
 .editor-wrapper .button-format {
   position: absolute;
   top: 5px;
-  right: 0;
+  right: 5px;
   z-index: 20;
   opacity: 0;
-  transition: opacity 0.3;
+  transition: opacity 0.3s;
 }
 
 .editor-wrapper:hover .button-format {
