--- a/src/components/preview.css
+++ b/src/components/preview.css
@@ -1,19 +1,20 @@
 .preview-wrapper {
   position: relative;
-  width: 100%;
+  height: 100%;
+  flex-grow: 1;
 }
 
 .preview-wrapper iframe {
   height: 100%;
-  background-color: white;
   width: 100%;
 }
 
-.react-draggable-transparent-selection .preview-wrapper::after {
+.react-draggable-transparent-selection .preview-wrapper:after {
   content: '';
   position: absolute;
   top: 0;
-  left: 0;
-  bottom: 0;
   right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
 }
